fix: added overflow to the calendar

--- a/src/app/features/calendar/calendar.component.scss
+++ b/src/app/features/calendar/calendar.component.scss
@@ -5,6 +5,10 @@
   margin: 40px 0;
 }
 
+.overflow-x {
+  overflow-x: auto;
+}
+
 .customCalendar {
   width: 700px;
   margin: 0 auto;
